# bitnuc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: coding_benchmark.rs  functions_benchmark.rs  hdist_benchmark.rs  packing_benchmark.rs  sequence_benchmark.rs  simd_comparison.rs
src/: error.rs  lib.rs  sequence.rs
src/utils/: analysis.rs  mod.rs  packing.rs
src/utils/functions/: mod.rs  split.rs
src/utils/functions/hamming/: mod.rs  multi.rs  scalar.rs
src/utils/packing/: aarch64.rs  avx.rs  mod.rs  naive.rs  sse.rs
src/utils/unpacking/: aarch64.rs  avx.rs  mod.rs  naive.rs
