[package]
name = "bitnuc"
version = "0.2.3"
edition = "2021"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org"]
repository = "https://github.com/noamteyssier/bitnuc"
documentation = "https://docs.rs/bitnuc"
description = "A library for efficient nucleotide sequence manipulation using 2-bit encoding"
license = "MIT"
keywords = ["bioinformatics", "dna", "sequence", "nucleotide", "genetics"]
categories = ["science", "data-structures"]

[features]
nosimd = []

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sequence_benchmark"
harness = false

[[bench]]
name = "packing_benchmark"
harness = false

[[bench]]
name = "simd_comparison"
harness = false
